# mvc-tg-bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
bot/: config.py  main.py
bot/abstractions/: __init__.py  message.py
bot/abstractions/builders/: base.py  message.py
bot/abstractions/handlers/: base.py  message.py
bot/builders/: base.py
bot/builders/message/: __init__.py  base.py  start.py  text_stats.py
bot/handlers/: __init__.py
bot/handlers/commands/: __init__.py  start.py
bot/handlers/fallbacks/: __init__.py  messages.py
bot/services/: __init__.py  arithmetic.py  text.py  trigonometry.py
