[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "^4.0.0"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D1",
  "D203",
  "D213",
  "EM",
  "ERA",
  "FIX",
  "INP",
  "ISC001",
  "PLR0913",
  "PLR2004",
  "PYI041",
  "RUF001",
  "S101",
  "TD002",
  "TD003",
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**.py" = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["slice"]
